rollback to npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sample-stack",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "private": true,
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "bugs": {
@@ -18,55 +18,55 @@
     "servers/*"
   ],
   "scripts": {
-    "build": "yarn build:packages",
-    "build:clean": "lerna exec yarn build:clean",
+    "build": "npm run build:packages",
+    "build:clean": "lerna exec npm run build:clean",
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u",
-    "clean": "lerna clean --yes && yarn build:clean && rimraf node_modules",
-    "clean:force": "rimraf package-lock.json yarn.lock && yarn clean",
+    "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
+    "clean:force": "rimraf package-lock.json yarn.lock && npm run clean",
     "cli": "node tools/cli",
-    "compile": "lerna exec -- yarn compile",
+    "compile": "lerna exec -- npm run compile",
     "coverage": "jest --coverage",
     "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "db:seed": "yarn db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "predevpublish": "git checkout devpublish && git pull origin devpublish && git merge -s recursive -X theirs develop -m 'merge from develop' && node tools/update-dependency-version.js",
     "devpublish": "lerna publish prerelease --ignore-scripts",
     "postdevpublish": "git checkout develop",
-    "devpublish:auto": "yarn devpublish -- --yes",
-    "devpublish:force": "yarn devpublish:forceManual -- --yes",
-    "devpublish:forceManual": "yarn devpublish -- --force-publish=*",
-    "devpublish:push": "yarn predevpublish && git push origin devpublish && yarn postdevpublish",
+    "devpublish:auto": "npm run devpublish -- --yes",
+    "devpublish:force": "npm run devpublish:forceManual -- --yes",
+    "devpublish:forceManual": "npm run devpublish -- --force-publish=*",
+    "devpublish:push": "npm run predevpublish && git push origin devpublish && npm run postdevpublish",
     "generateGraphql": "graphql-codegen",
-    "generateGraphql:watch": "yarn generateGraphql -- --watch",
+    "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
-    "postbootstrap": "yarn build",
+    "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
-    "publish": "yarn lernapublish",
-    "publish:force": "yarn lernapublish -- --force-publish=*",
-    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
-    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
+    "publish": "npm run lernapublish",
+    "publish:force": "npm run lernapublish -- --force-publish=*",
+    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
     "test": "cross-env ENV_FILE=config/test/test.env jest",
-    "posttest": "yarn lint",
+    "posttest": "npm run lint",
     "test:watch": "npm test -- --watch",
-    "pretravis": "yarn compile",
+    "pretravis": "npm run compile",
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
-    "posttravis": "yarn lint",
+    "posttravis": "npm run lint",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "zen:build": "cross-env NODE_ENV=production zen build",
     "zen:exp": "zen exp",
     "zen:watch": "zen  watch -x",
-    "zen:watch:debug": "yarn zen:watch -- -v"
+    "zen:watch:debug": "npm run zen:watch -- -v"
   },
   "resolutions": {
     "chokidar": "^3.4.0"
