--- a/packages-modules/counter/browser/package.json
+++ b/packages-modules/counter/browser/package.json
@@ -7,18 +7,18 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "yarn build:clean && yarn build:lib",
+    "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
-    "build:lib:watch": "yarn build:lib -- --watch",
+    "build:lib:watch": "npm run build:lib -- --watch",
     "jest": "./node_modules/.bin/jest",
-    "prepublish": "yarn build",
+    "prepublish": "npm run build",
     "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json ",
     "schema:generate": "./node_modules/.bin/apollo-codegen generate src/browser/graphql/**/*.graphql --schema schema.json --target typescript --output src/browser/types/schema.ts",
     "test": "cross-env ENV_FILE=../../config/test/test.env jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
-    "watch": "yarn build:lib:watch"
+    "watch": "npm run build:lib:watch"
   },
   "jest": {
     "moduleFileExtensions": [
