--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "@sample-stack/platform-server": "file:packages/sample-platform/server",
     "@sample-stack/store": "file:packages/sample-store",
     "dataloader": "^2.0.0",
+    "graphql": "^14.7.0",
+    "graphql-tools": "^4.0.8",
     "sample-stack-backend-server": "file:servers/backend-server",
     "sample-stack-frontend-server": "file:servers/frontend-server",
     "sample-stack-moleculer-server": "file:servers/moleculer-server"
@@ -223,7 +225,7 @@
     "react-hot-loader": "^4.12.18",
     "react-test-renderer": "^16.12.0",
     "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-mock-store": "^1.5.4",
@@ -254,7 +256,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "wait-on": "^4.0.0",
-    "webpack": "4.43.0",
+    "webpack": "4.46.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "3.10.1",
