--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "admin-layout-desktop-server",
+  "name": "sample-stack-desktop",
   "version": "0.0.1",
   "private": true,
-  "description": "Sample Desktop server",
+  "description": "Sample Desktop",
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "bugs": {
     "url": "https://github.com/cdmbase/fullstack-pro/issues"
@@ -34,10 +34,10 @@
     "@ant-design/icons": "^4.2.2",
     "@cdm-logger/client": "^5.0.7",
     "@cdm-logger/server": "^6.0.0",
-    "@common-stack/client-core": "0.0.249",
-    "@common-stack/client-react": "0.0.249",
-    "@common-stack/core": "0.0.249",
-    "@common-stack/server-core": "0.0.249",
+    "@common-stack/client-core": "0.0.251",
+    "@common-stack/client-react": "0.0.251",
+    "@common-stack/core": "0.0.251",
+    "@common-stack/server-core": "0.0.251",
     "@sample-stack/core": "file:../../packages/sample-core",
     "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
     "@sample-stack/platform-browser": "file:../../packages/sample-platform/browser",
@@ -87,9 +87,9 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "ramda": "^0.26.1",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-apollo": "^3.1.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-fela": "11.0.2",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
