--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -87,7 +87,7 @@
     "react": "16.13.1",
     "react-apollo": "^3.1.3",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "16.13.1",
+    "react-dom": "^16.14.0",
     "react-i18next": "^10.12.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
