--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@sample-stack/store": "file:packages/sample-store",
     "dataloader": "^2.0.0",
     "graphql": "^14.7.0",
+    "graphql-tag": "^2.11.0",
     "graphql-tools": "^4.0.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
