--- a/package.json
+++ b/package.json
@@ -271,7 +271,7 @@
   },
   "engines": {
     "node": ">=10.15.3 < 14.0.0",
-    "npm": ">=6.x <=7.x"
+    "npm": ">6.x <=7.x"
   },
   "cacheDirectories": [
     ".cache"
