--- a/package.json
+++ b/package.json
@@ -141,7 +141,6 @@
     "@types/node": "13.1.0",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.2",
-    "@types/react-addons-test-utils": "^0.14.25",
     "@types/react-dom": "^17.0.1",
     "@types/react-helmet": "^5.0.14",
     "@types/react-loadable": "^5.5.3",
@@ -221,6 +220,7 @@
     "prettier": "^1.19.1",
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^4.0.0",
+    "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-hot-loader": "^4.12.18",
     "react-test-renderer": "^16.12.0",
     "redux-devtools": "^3.5.0",
