--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sample-stack",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "private": true,
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "bugs": {
@@ -78,6 +78,7 @@
     "graphql-tag": "^2.11.0",
     "graphql-tools": "^4.0.8",
     "react": "^16.14.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
     "sample-stack-backend-server": "file:servers/backend-server",
     "sample-stack-desktop": "file:portable-devices/desktop",
@@ -123,6 +124,9 @@
     "@graphql-codegen/typescript-resolvers": "1.13.5",
     "@hot-loader/react-dom": "^16.14.0",
     "@larix/zen": "0.1.35",
+    "@redux-devtools/core": "^3.9.0",
+    "@redux-devtools/dock-monitor": "^1.4.0",
+    "@redux-devtools/log-monitor": "^2.3.0",
     "@shelf/jest-mongodb": "^1.1.5",
     "@types/async": "^3.0.3",
     "@types/body-parser": "1.17.1",
@@ -222,10 +226,7 @@
     "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-hot-loader": "^4.12.18",
     "react-test-renderer": "^16.12.0",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-devtools-log-monitor": "^1.4.0",
     "redux-mock-store": "^1.5.4",
     "remap-istanbul": "^0.13.0",
     "resolve-url-loader": "^3.1.1",
@@ -259,7 +260,7 @@
     "webpack-dev-server": "3.10.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge":"^5.4.0",
+    "webpack-merge": "^5.4.0",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.4.3",
     "webpack-virtual-modules": "^0.2.1",
