--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production zen build",
+    "build:dev": "cross-env NODE_ENV=development zen build",
     "build:clean": "rimraf dist .awcache",
     "build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
     "build:debug:verbose": "npm run build:debug -- -v",
@@ -60,7 +61,7 @@
     "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
     "@sample-stack/platform-browser": "file:../../packages/sample-platform/browser",
     "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
+    "apollo-client": "^2.6.10",
     "apollo-fetch": "^0.7.0",
     "apollo-link": "^1.2.13",
     "apollo-link-batch-http": "^1.2.13",
@@ -73,9 +74,9 @@
     "apollo-link-schema": "^1.2.4",
     "apollo-link-ws": "^1.0.19",
     "apollo-logger": "^0.3.3",
-    "browser-bunyan": "^1.5.3",
+    "browser-bunyan": "^1.6.3",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.6.1",
+    "connected-react-router": "^6.9.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "envalid": "^7.0.0",
@@ -104,7 +105,7 @@
     "lodash": "^4.17.15",
     "ramda": "^0.26.1",
     "react": "^16.14.0",
-    "react-apollo": "^3.1.3",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
     "react-fela": "11.0.2",
     "react-helmet": "^5.2.1",
