--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -2,7 +2,7 @@
   "name": "sample-stack-desktop",
   "version": "0.0.1",
   "private": true,
-  "description": "Sample Desktop",
+  "description": "App is based on Electron, React, Redux and NodeJS as a back end",
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "bugs": {
     "url": "https://github.com/cdmbase/fullstack-pro/issues"
@@ -65,6 +65,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "electron-positioner": "^4.1.0",
     "envalid": "^7.0.0",
     "fela": "11.6.0",
     "fela-beautifier": "^11.6.0",
@@ -116,6 +117,7 @@
     "electron": "^11.2.0",
     "electron-builder": "^22.9.1",
     "electron-webpack": "^2.8.2",
-    "electron-webpack-ts": "^4.0.1"
+    "electron-webpack-ts": "^4.0.1",
+    "electron-devtools-installer": "^3.1.1"
   }
 }
