--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -27,6 +27,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.7",
     "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "antd": "^4.5.2",
