--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@babel/plugin-syntax-import-meta": "^7.7.4",
     "@babel/plugin-syntax-numeric-separator": "^7.7.4",
     "@babel/plugin-transform-destructuring": "^7.7.4",
+    "@babel/plugin-transform-for-of": "^7.13.0",
     "@babel/plugin-transform-modules-commonjs": "^7.7.5",
     "@babel/plugin-transform-regenerator": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
