--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -63,6 +63,7 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "electron-debug": "^3.1.0",
+    "electron-json-storage": "^2.0.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "electron-positioner": "^4.1.0",
@@ -88,6 +89,7 @@
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "pify": "^2.3.0",
     "ramda": "^0.26.1",
     "react": "^16.14.0",
     "react-apollo": "^3.1.5",
