--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -22,20 +22,27 @@
   },
   "dependencies": {
     "@cdm-logger/client": "^5.0.7",
+    "@common-stack/client-core": "0.0.251",
+    "@common-stack/client-react": "0.0.251",
+    "@common-stack/core": "0.0.251",
+    "@common-stack/server-core": "0.0.251",
     "@expo/samples": "^3.0.3",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.7",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.6.8",
     "apollo-fetch": "^0.7.0",
     "apollo-link": "^1.2.13",
+    "apollo-link-batch-http": "^1.2.13",
     "apollo-link-context": "^1.0.19",
     "apollo-link-debounce": "^2.1.0",
     "apollo-link-error": "^1.1.12",
@@ -47,6 +54,8 @@
     "apollo-logger": "^0.3.3",
     "apollo-upload-client": "^10.0.0",
     "axios": "^0.19.2",
+    "browser-bunyan": "^1.5.3",
+    "connected-react-router": "^6.6.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.2.1",
@@ -68,6 +77,18 @@
     "expo-updates": "~0.4.1",
     "expo-web-browser": "~8.6.0",
     "extract-files": "^5.0.0",
+    "fela": "11.0.2",
+    "fela-beautifier": "^11.0.2",
+    "fela-dom": "11.0.2",
+    "fela-font-renderer": "^5.0.25",
+    "fela-perf": "^11.0.2",
+    "fela-plugin-fallback-value": "^11.0.2",
+    "fela-plugin-logger": "^11.0.2",
+    "fela-plugin-lvha": "^5.0.16",
+    "fela-plugin-prefixer": "^11.0.2",
+    "fela-plugin-unit": "^11.0.2",
+    "fela-plugin-validator": "^11.0.2",
+    "fela-preset-web": "^11.0.2",
     "filesize": "^3.5.11",
     "formik": "^2.2.6",
     "graphql": "^14.7.0",
@@ -78,17 +99,23 @@
     "i18next": "^11.2.3",
     "immer": "^3.2.0",
     "immutability-helper": "^3.0.1",
+    "inversify": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "jest-expo": "^40.0.2",
     "lodash": "^4.17.4",
     "metro-minify-terser": "^0.56.0",
     "minilog": "^3.1.0",
     "native-base": "^2.13.5",
     "prop-types": "^15.6.0",
+    "ramda": "^0.26.1",
     "react": "16.13.1",
     "react-apollo": "^3.1.3",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^16.14.0",
+    "react-fela": "11.0.2",
+    "react-helmet": "^5.2.1",
     "react-i18next": "^10.12.2",
+    "react-loadable": "^5.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-dotenv": "^2.5.3",
@@ -110,6 +137,12 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^1.2.0",
     "react-redux": "^7.1.0",
+    "react-resizable": "^1.10.1",
+    "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
