--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -81,6 +81,7 @@
     "fela-beautifier": "^11.0.2",
     "fela-dom": "11.0.2",
     "fela-font-renderer": "^5.0.25",
+    "fela-native": "^11.6.1",
     "fela-perf": "^11.0.2",
     "fela-plugin-fallback-value": "^11.0.2",
     "fela-plugin-logger": "^11.0.2",
@@ -112,7 +113,7 @@
     "react-apollo": "^3.1.3",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^16.14.0",
-    "react-fela": "11.0.2",
+    "react-fela": "^11.0.2",
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.12.2",
     "react-loadable": "^5.5.0",
