--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -35,6 +35,7 @@
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "@ant-design/react-native": "^4.0.7",
     "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
