--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -175,6 +175,7 @@
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-keyboard-spacer": "^0.4.1",
     "@types/react-navigation": "^3.0.5",
+    "@types/react-router-config": "^5.0.2",
     "@types/react-test-renderer": "^16.0.2",
     "apollo-utilities": "^1.0.3",
     "axios-mock-adapter": "^1.17.0",
