Update drawer history navigation

--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -123,6 +123,7 @@
     "react-i18next": "^10.12.2",
     "react-loadable": "^5.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-big-calendar": "^0.8.1",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-dotenv": "^2.5.3",
     "react-native-elements": "^3.2.0",
@@ -177,6 +178,7 @@
     "@types/react-navigation": "^3.0.5",
     "@types/react-router-config": "^5.0.2",
     "@types/react-test-renderer": "^16.0.2",
+    "@types/redux-logger": "^3.0.8",
     "apollo-utilities": "^1.0.3",
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.1",
