--- a/lerna.json
+++ b/lerna.json
@@ -13,24 +13,36 @@
   "command": {
     "publish": {
       "graphType": "all",
-      "allowBranch": ["publish", "devpublish"],
-      "message": "chore(release): publish"
-    },
-    "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "allowBranch": [
+        "publish",
+        "devpublish"
+      ],
+      "message": "chore(release): publish",
+      "ignoreChanges": [
+        "**/__fixtures__/**",
+        "**/__tests__/**",
+        "**/*.md",
+        "**/example/**"
+      ]
     },
     "version": {
-      "allowBranch": ["master", "develop", "publish", "devpublish"],
+      "allowBranch": [
+        "master",
+        "develop",
+        "publish",
+        "devpublish"
+      ],
       "conventionalCommits": true,
       "message": "chore: release package(s)"
     }
   },
-  "npmCLient": "npm",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "packages": [
-    "packages-modules/**", 
-    "packages/**", 
-    "servers/*", 
-    "portable-devices/desktop"
+    "packages-modules/**",
+    "packages/**",
+    "servers/*",
+    "portable-devices/*"
   ],
   "version": "0.0.0"
 }
