--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -1,19 +1,21 @@
 {
   "name": "sample-stack-mobile",
+  "version": "0.0.1",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "__generated__/AppEntry.js",
   "scripts": {
     "build:clean": "rimraf build .expo .tmp",
     "cli": "node ../../tools/cli",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "exp-login": "cross-env NODE_ENV=production expo login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
     "exp-publish": "npm run exp-login && npm run expo p --non-interactive",
+    "postinstall": "expo-yarn-workspaces postinstall",
     "lint": "npm run eslint && npm run tslint",
     "test": "npm run tests && npm run lint",
     "tests": "jest",
     "tests:watch": "jest --watch",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
-    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env expo start",
+    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env expo start --clear",
     "watch:android": "expo start --android",
     "watch:ios": "expo start --ios"
   },
@@ -49,7 +51,7 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.2.1",
-    "expo-cli": "^4.1.6",
+    "expo-cli": "^4.3.4",
     "expo-constants": "~9.3.0",
     "expo-facebook": "~9.1.0",
     "expo-file-system": "~9.3.0",
@@ -77,13 +79,12 @@
     "i18next": "^11.2.3",
     "immer": "^3.2.0",
     "immutability-helper": "^3.0.1",
-    "jest-expo": "^40.0.2",
     "lodash": "^4.17.4",
     "metro-minify-terser": "^0.56.0",
     "minilog": "^3.1.0",
     "native-base": "^2.13.5",
     "prop-types": "^15.6.0",
-    "react": "16.13.1",
+    "react": "^16.14.0",
     "react-apollo": "^3.1.5",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^16.14.0",
@@ -103,17 +104,12 @@
     "react-native-screens": "~2.15.0",
     "react-native-simple-picker": "^3.1.2",
     "react-native-swipe-list-view": "^3.2.6",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.2.2",
-    "react-navigation-drawer": "^1.4.0",
-    "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^1.2.0",
-    "react-redux": "^7.1.0",
+    "react-native-web": "^0.15.5",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
@@ -127,12 +123,12 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-env": "^7.7.7",
     "@bam.tech/react-native-graphql-transformer": "^0.1.5",
     "@testing-library/react-native": "^5.0.3",
     "@types/expo": "^33.0.1",
-    "@types/jest": "^24.0.13",
-    "@types/react": "~16.9.35",
+    "@types/jest": "^24.0.24",
+    "@types/react": "^16.9.56",
     "@types/react-native": "~0.63.2",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-keyboard-spacer": "^0.4.1",
@@ -140,36 +136,39 @@
     "@types/react-test-renderer": "^16.0.2",
     "apollo-utilities": "^1.0.3",
     "axios-mock-adapter": "^1.17.0",
-    "babel-eslint": "^10.0.1",
     "babel-jest": "^26.3.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-expo": "8.3.0",
     "caporal": "^0.10.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "compression": "^1.7.1",
-    "connect": "^3.6.5",
-    "cross-env": "^5.1.1",
+    "connect": "^3.7.0",
+    "cross-env": "^6.0.3",
     "eslint": "^7.7.0",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-native": "^3.8.1",
     "exp": "^57.2.1",
     "expo-react-native-adapter": "^3.0.1",
+    "expo-yarn-workspaces": "^1.3.1",
     "freeport-async": "^1.1.1",
     "image-size": "^0.6.2",
     "jest": "^26.2.2",
     "jest-expo": "^40.0.0",
-    "jsdom": "^11.5.1",
+    "jsdom": "^15.2.1",
     "lint-staged": "^7.3.0",
     "mkdirp": "^0.5.1",
     "prettier": "1.14.3",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-native-web": "^0.15.0",
     "react-test-renderer": "16.11.0",
     "request": "^2.83.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^3.0.0",
     "typescript": "^3.8.3",
-    "ws": "^5.1.1"
+    "ws": "^7.2.1"
+  },
+  "expo-yarn-workspaces": {
+    "symlinks": [
+      "react-native-unimodules",
+      "react-native-web"
+    ]
   }
 }
