convert tslint to eslint

--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -85,19 +85,18 @@
     "expo-updates": "~0.4.1",
     "expo-web-browser": "~8.6.0",
     "extract-files": "^5.0.0",
-    "fela": "11.0.2",
-    "fela-beautifier": "^11.0.2",
-    "fela-dom": "11.0.2",
+    "fela": "11.6.0",
+    "fela-beautifier": "^11.6.0",
+    "fela-dom": "11.6.0",
     "fela-font-renderer": "^5.0.25",
-    "fela-native": "^11.6.1",
-    "fela-perf": "^11.0.2",
-    "fela-plugin-fallback-value": "^11.0.2",
-    "fela-plugin-logger": "^11.0.2",
+    "fela-perf": "^11.6.0",
+    "fela-plugin-fallback-value": "^11.6.0",
+    "fela-plugin-logger": "^11.6.0",
     "fela-plugin-lvha": "^5.0.16",
-    "fela-plugin-prefixer": "^11.0.2",
-    "fela-plugin-unit": "^11.0.2",
-    "fela-plugin-validator": "^11.0.2",
-    "fela-preset-web": "^11.0.2",
+    "fela-plugin-prefixer": "^11.6.0",
+    "fela-plugin-unit": "^11.6.0",
+    "fela-plugin-validator": "^11.6.0",
+    "fela-preset-web": "^11.6.0",
     "filesize": "^3.5.11",
     "formik": "^2.2.6",
     "graphql": "^14.7.0",
@@ -121,7 +120,7 @@
     "react-apollo": "^3.1.5",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^16.14.0",
-    "react-fela": "^11.0.2",
+    "react-fela": "11.6.0",
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.12.2",
     "react-loadable": "^5.5.0",
@@ -163,24 +162,17 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.7.7",
     "@bam.tech/react-native-graphql-transformer": "^0.1.5",
     "@testing-library/react-native": "^5.0.3",
     "@types/expo": "^33.0.1",
-    "@types/jest": "^24.0.24",
-    "@types/react": "^16.9.56",
     "@types/react-native": "~0.63.2",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-keyboard-spacer": "^0.4.1",
     "@types/react-navigation": "^3.0.5",
-    "@types/react-router-config": "^5.0.2",
     "@types/react-test-renderer": "^16.0.2",
     "@types/redux-logger": "^3.0.8",
     "apollo-utilities": "^1.0.3",
     "axios-mock-adapter": "^1.17.0",
-    "babel-jest": "^26.3.0",
     "babel-preset-expo": "8.3.0",
     "caporal": "^0.10.0",
     "chai": "^4.1.2",
