--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
-    "lerna": "cross-env NODE_ENV=development yarn clean && lerna exec yarn && lerna link",
+    "lerna": "lerna bootstrap",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
@@ -103,6 +103,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.7.5",
     "@babel/plugin-transform-regenerator": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
+    "@typescript-eslint/parser": "^4.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@babel/polyfill": "7.7.0",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-flow": "^7.7.4",
@@ -148,6 +150,7 @@
     "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.3",
+    "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.3",
     "@types/semver": "^6.2.0",
     "@types/sinon": "^7.5.1",
@@ -160,6 +163,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
     "caporal": "^1.3.0",
     "chokidar": "^3.4.0",
@@ -179,8 +183,9 @@
     "envalid": "^7.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-graphql": "^3.1.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-graphql": "^4.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
@@ -250,9 +255,6 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "tslib": "^1.10.0",
-    "tslint": "^5.20.1",
-    "tslint-loader": "^3.6.0",
-    "tslint-react": "^4.1.0",
     "typedoc": "^0.15.5",
     "typescript": "^3.8.3",
     "uglify-es": "^3.3.9",
