--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
-    "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
+    "lint": "eslint -c .eslintrc.js --ext .ts ./packages/**/src/**/*.ts --ignore-pattern \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
@@ -103,8 +103,6 @@
     "@babel/plugin-transform-modules-commonjs": "^7.7.5",
     "@babel/plugin-transform-regenerator": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
-    "@typescript-eslint/parser": "^4.20.0",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@babel/polyfill": "7.7.0",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-flow": "^7.7.4",
@@ -157,6 +155,9 @@
     "@types/webpack": "^4.41.0",
     "@types/webpack-env": "^1.14.1",
     "@types/zen-observable": "^0.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "apollo": "^2.21.2",
     "apollo-server-testing": "^2.21.1",
     "autoprefixer": "^9.7.3",
@@ -184,8 +185,11 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.23.0",
-    "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
@@ -255,6 +259,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "tslib": "^1.10.0",
+    "tslint": "^6.1.3",
     "typedoc": "^0.15.5",
     "typescript": "^3.8.3",
     "uglify-es": "^3.3.9",
