--- a/package.json
+++ b/package.json
@@ -185,10 +185,14 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.23.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-jsx-a11y@": "^6.4.1",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
