--- a/packages/sample-store/package.json
+++ b/packages/sample-store/package.json
@@ -41,6 +41,9 @@
     "@sample-stack/core": "file:../sample-core",
     "sequelize": "^5.21.3"
   },
+  "peerDependencies": {
+    "inversify": "*"
+  },
   "publishConfig": {
     "access": "public"
   },
