--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "pretravis": "npm run compile",
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
     "posttravis": "npm run lint",
-    "watch": "lerna exec --no-sort --ignore *server --ignore *desktop --stream --parallel -- webpack --watch",
+    "watch": "lerna exec --no-sort --ignore *server --ignore *desktop --ignore *mobile --stream --parallel -- webpack --watch",
     "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "zen:build": "cross-env NODE_ENV=production zen build",
     "zen:exp": "zen exp",
@@ -168,6 +168,7 @@
     "babel-loader": "^8.0.6",
     "caporal": "^1.3.0",
     "chokidar": "^3.4.0",
+    "clean-webpack-plugin": "^2.0.0",
     "concurrently": "^5.0.2",
     "connect": "^3.7.0",
     "copy-webpack-plugin": "^6.4.0",
