--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
-    "lint": "eslint -c .eslintrc.js --ext .ts ./packages/**/src/**/*.ts --ignore-pattern \"./packages/**/node_modules/**/*.ts\"",
+    "lint": "eslint -c .eslintrc.js --ext .ts ./packages/**/src/**/*.ts ./packages-modules/**/src/**/*.ts",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
@@ -187,11 +187,16 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.3",
     "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-jsx-a11y@": "^6.4.1",
     "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
@@ -238,7 +243,7 @@
     "openurl": "^1.1.1",
     "pm2": "^4.2.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^4.0.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
