refactor: :art: Convert all linking with `file:` to `link:` for `yarn` to work.
file:dependencies in workspaces will install full dependencies instead of linking. In yarn, the replacement for this is  to use `link:` instead.

Due this change `npm` wont' work

--- a/packages-modules/counter/server/package.json
+++ b/packages-modules/counter/server/package.json
@@ -39,8 +39,17 @@
       "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
     }
   },
+  "devDependencies": {
+    "webpack": "4.43.0"
+  },
   "peerDependencies": {
-    "@common-stack/server-core": ">=0.0.255"
+    "@cdm-logger/server": "*",
+    "@common-stack/core": "*",
+    "@common-stack/server-core": "*",
+    "apollo-server-caching": "*",
+    "dataloader": "*",
+    "inversify": "*",
+    "moleculer": "*"
   },
   "publishConfig": {
     "access": "public"
