--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -61,10 +61,10 @@
     "@cdm-logger/server": "^6.0.0",
     "@common-stack/core": "0.0.255",
     "@common-stack/server-core": "0.0.255",
-    "@sample-stack/core": "file:../../packages/sample-core",
-    "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
-    "@sample-stack/platform-server": "file:../../packages/sample-platform/server",
-    "@sample-stack/store": "file:../../packages/sample-store",
+    "@sample-stack/core": "link:../../packages/sample-core",
+    "@sample-stack/counter-module-server": "link:../../packages-modules/counter/server",
+    "@sample-stack/platform-server": "link:../../packages/sample-platform/server",
+    "@sample-stack/store": "link:../../packages/sample-store",
     "apollo-datasource": "^0.7.0",
     "apollo-datasource-rest": "^0.8.0",
     "apollo-errors": "^1.9.0",
