--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -38,9 +38,9 @@
     "@common-stack/client-react": "0.0.255",
     "@common-stack/core": "0.0.255",
     "@common-stack/server-core": "0.0.255",
-    "@sample-stack/core": "file:../../packages/sample-core",
-    "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
-    "@sample-stack/platform-browser": "file:../../packages/sample-platform/browser",
+    "@sample-stack/core": "link:../../packages/sample-core",
+    "@sample-stack/counter-module-browser": "link:../../packages-modules/counter/browser",
+    "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.10",
