--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -43,7 +43,7 @@
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
+    "@sample-stack/counter-module-browser": "link:../../packages-modules/counter/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-cache-router": "^1.1.6",
