--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -38,9 +38,9 @@
     "@common-stack/client-core": "0.0.255",
     "@common-stack/core": "0.0.255",
     "@common-stack/server-core": "0.0.255",
-    "@sample-stack/core": "file:../../packages/sample-core",
-    "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
-    "@sample-stack/platform-server": "file:../../packages/sample-platform/server",
+    "@sample-stack/core": "link:../../packages/sample-core",
+    "@sample-stack/counter-module-server": "link:../../packages-modules/counter/server",
+    "@sample-stack/platform-server": "link:../../packages/sample-platform/server",
     "apollo-datasource": "^0.7.0",
     "apollo-logger": "^0.3.3",
     "apollo-server-cache-memcached": "^0.6.7",
