add publish registry in lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -12,6 +12,7 @@
   },
   "command": {
     "publish": {
+      "registry": "https://registry.npmjs.org",
       "graphType": "all",
       "allowBranch": [
         "publish",
