--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@ant-design/react-native": "^4.0.7",
     "@cdm-logger/client": "^5.0.7",
+    "@codler/react-native-keyboard-aware-scroll-view": "^1.0.1",
     "@common-stack/client-core": "^0.0.254",
     "@common-stack/client-react": "^0.0.254",
     "@common-stack/core": "^0.0.254",
