--- a/portable-devices/mobile/app.json
+++ b/portable-devices/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mobile2",
-    "slug": "mobile2",
+    "name": "FullStack Pro",
+    "slug": "sample-stack",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
