--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -89,6 +89,7 @@
     "fela-beautifier": "^11.6.0",
     "fela-dom": "11.6.0",
     "fela-font-renderer": "^5.0.25",
+    "fela-native": "^11.6.1",
     "fela-perf": "^11.6.0",
     "fela-plugin-fallback-value": "^11.6.0",
     "fela-plugin-logger": "^11.6.0",
@@ -200,6 +201,9 @@
     "rimraf": "^3.0.0",
     "typescript": "^3.8.3",
     "ws": "^7.2.1"
+  },
+  "peerDependencies": {
+    "react-native-safe-area-context": "*"
   },
   "expo-yarn-workspaces": {
     "symlinks": [
