--- a/packages-modules/counter/browser/package.json
+++ b/packages-modules/counter/browser/package.json
@@ -56,6 +56,7 @@
     "react-native": "*",
     "react-redux": "*",
     "react-router": "*",
+    "react-router-dom": "*",
     "redux": "*"
   },
   "publishConfig": {
