--- a/package.json
+++ b/package.json
@@ -279,5 +279,20 @@
   },
   "cacheDirectories": [
     ".cache"
-  ]
+  ],
+  "iohook": {
+    "targets": [
+      "node-72",
+      "electron-85"
+    ],
+    "platforms": [
+      "win32",
+      "darwin",
+      "linux"
+    ],
+    "arches": [
+      "x64",
+      "ia32"
+    ]
+  }
 }
