--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -64,6 +64,7 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
+    "electron": "^11.2.0",
     "electron-debug": "^3.1.0",
     "electron-json-storage": "^2.0.0",
     "electron-log": "^4.2.4",
@@ -120,11 +121,10 @@
     "subscriptions-transport-ws": "0.9.18"
   },
   "devDependencies": {
-    "electron": "^11.2.0",
     "electron-builder": "^22.9.1",
+    "electron-devtools-installer": "^3.1.1",
     "electron-webpack": "^2.8.2",
-    "electron-webpack-ts": "^4.0.1",
-    "electron-devtools-installer": "^3.1.1"
+    "electron-webpack-ts": "^4.0.1"
   },
   "iohook": {
     "targets": [
