changed to native router

--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -147,6 +147,7 @@
     "react-router": "^5.1.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
+    "react-router-native": "^5.2.0",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
@@ -171,6 +172,7 @@
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-keyboard-spacer": "^0.4.1",
     "@types/react-navigation": "^3.0.5",
+    "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^16.0.2",
     "@types/redux-logger": "^3.0.8",
     "apollo-utilities": "^1.0.3",
