renamed `npm run` to `yarn`

--- a/package.json
+++ b/package.json
@@ -21,56 +21,56 @@
     ]
   },
   "scripts": {
-    "build": "npm run build:packages",
-    "build:clean": "lerna exec npm run build:clean",
+    "build": "yarn build:packages",
+    "build:clean": "lerna exec yarn build:clean",
     "build:packages": "lerna run build --ignore *server --ignore *desktop",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --ignore *desktop --stream",
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u",
-    "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
-    "clean:force": "rimraf package-lock.json yarn.lock && npm run clean",
+    "clean": "lerna clean --yes && yarn build:clean && rimraf node_modules",
+    "clean:force": "rimraf package-lock.json yarn.lock && yarn clean",
     "cli": "node tools/cli",
-    "compile": "lerna exec -- npm run compile",
+    "compile": "lerna exec -- yarn compile",
     "coverage": "jest --coverage",
     "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:seed": "yarn db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "predevpublish": "git checkout devpublish && git pull origin devpublish && git merge -s recursive -X theirs develop -m 'merge from develop' && node tools/update-dependency-version.js",
     "devpublish": "lerna publish prerelease --ignore-scripts",
     "postdevpublish": "git checkout develop",
-    "devpublish:auto": "npm run devpublish -- --yes",
-    "devpublish:force": "npm run devpublish:forceManual -- --yes",
-    "devpublish:forceManual": "npm run devpublish -- --force-publish=*",
-    "devpublish:push": "npm run predevpublish && git push origin devpublish && npm run postdevpublish",
+    "devpublish:auto": "yarn devpublish -- --yes",
+    "devpublish:force": "yarn devpublish:forceManual -- --yes",
+    "devpublish:forceManual": "yarn devpublish -- --force-publish=*",
+    "devpublish:push": "yarn predevpublish && git push origin devpublish && yarn postdevpublish",
     "generateGraphql": "graphql-codegen",
-    "generateGraphql:watch": "npm run generateGraphql -- --watch",
+    "generateGraphql:watch": "yarn generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
     "lint": "eslint -c .eslintrc.js --ext .ts ./packages/**/src/**/*.ts ./packages-modules/**/src/**/*.ts",
-    "lint:fix": "npm run lint -- --fix",
-    "postbootstrap": "npm run build",
+    "lint:fix": "yarn lint -- --fix",
+    "postbootstrap": "yarn build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
-    "publish": "npm run lernapublish",
-    "publish:force": "npm run lernapublish -- --force-publish=*",
-    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
-    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "publish": "yarn lernapublish",
+    "publish:force": "yarn lernapublish -- --force-publish=*",
+    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
+    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
     "test": "cross-env ENV_FILE=config/test/test.env jest",
-    "posttest": "npm run lint",
+    "posttest": "yarn lint",
     "test:watch": "npm test -- --watch",
-    "pretravis": "npm run compile",
+    "pretravis": "yarn compile",
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
-    "posttravis": "npm run lint",
+    "posttravis": "yarn lint",
     "watch": "lerna exec --no-sort --ignore *server --ignore *desktop --ignore *mobile --stream --parallel -- webpack --watch",
     "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "zen:build": "cross-env NODE_ENV=production zen build",
     "zen:exp": "zen exp",
     "zen:watch": "zen  watch -x",
-    "zen:watch:debug": "npm run zen:watch -- -v"
+    "zen:watch:debug": "yarn zen:watch -- -v"
   },
   "resolutions": {
     "chokidar": "^3.4.0"
@@ -276,11 +276,11 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "wait-on": "^4.0.0",
-    "webpack": "4.43.0",
+    "webpack": "4.46.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "3.10.1",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^5.4.0",
