--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -8,10 +8,10 @@
     "cli": "node ../../tools/cli",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "exp-login": "cross-env NODE_ENV=production expo login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
-    "exp-publish": "npm run exp-login && npm run expo p --non-interactive",
+    "exp-publish": "yarn exp-login && yarn expo p --non-interactive",
     "postinstall": "expo-yarn-workspaces postinstall",
-    "lint": "npm run eslint && npm run tslint",
-    "test": "npm run tests && npm run lint",
+    "lint": "yarn eslint && yarn tslint",
+    "test": "yarn tests && yarn lint",
     "tests": "jest",
     "tests:watch": "jest --watch",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
