--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -9,28 +9,28 @@
   ],
   "author": "",
   "scripts": {
-    "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production npm run build:dist",
+    "prebuild": "yarn build:clean",
+    "build": "cross-env NODE_ENV=production yarn build:dist",
     "build:clean": "rimraf dist",
     "build:dist": "webpack",
-    "build:watch": "npm run build:dist -- --watch",
+    "build:watch": "yarn build:dist -- --watch",
     "cli": "moleculer connect --config ./dist/moleculer.config.js",
-    "cli:dev": " cross-env ENV_FILE=../../config/development/dev.env npm run cli",
-    "cli:docker": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/docker-staging.env  npm run cli",
-    "cli:staging": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env  npm run cli",
-    "cli:test": " cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env  npm run cli",
-    "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+    "cli:dev": " cross-env ENV_FILE=../../config/development/dev.env yarn cli",
+    "cli:docker": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/docker-staging.env  yarn cli",
+    "cli:staging": " cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env  yarn cli",
+    "cli:test": " cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env  yarn cli",
+    "docker:build": "yarn build && docker build . -t $npm_package_name:$npm_package_version",
     "docker:run": "docker run -it --env-file ../../config/staging/docker-staging.env  $npm_package_name:$npm_package_version",
     "jest": "./node_modules/.bin/jest",
     "start": "node dist/index.js",
     "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon dist",
     "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env nodemon dist",
-    "pretest": "npm run build",
+    "pretest": "yarn build",
     "test": "jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
-    "watch": "npm run start:dev"
+    "watch": "yarn start:dev"
   },
   "dependencies": {
     "@cdm-logger/client": "^5.0.7",
