--- a/tools/templates/module/browser/package.json
+++ b/tools/templates/module/browser/package.json
@@ -8,12 +8,12 @@
         "test": "cross-env ENV_FILE=../../config/test/test.env jest",
         "test:debug": "npm test -- --runInBand",
         "test:watch": "npm test -- --watch",
-        "prepublish": "npm run build",
-        "watch": "npm run build:lib:watch",
-        "build": "npm run build:clean && npm run build:lib",
+        "prepublish": "yarn build",
+        "watch": "yarn build:lib:watch",
+        "build": "yarn build:clean && yarn build:lib",
         "build:clean": "rimraf lib",
         "build:lib": "webpack",
-        "build:lib:watch": "npm run build:lib -- --watch",
+        "build:lib:watch": "yarn build:lib -- --watch",
         "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json ",
         "schema:generate": "./node_modules/.bin/apollo-codegen generate src/browser/graphql/**/*.gql --schema schema.json --target typescript --output src/browser/graphql/schema.ts",
         "githubschema:download": "./node_modules/.bin/apollo-codegen download-schema https://api.github.com/graphql --output githubapi-schema.json  --header 'Authorization: Bearer 0ec1b5e245de6061066262daf4aac2135fddd683'",
