--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -15,14 +15,14 @@
   "author": "CDMBase LLC",
   "main": "index.js",
   "scripts": {
-    "prebuild": "npm run build:clean",
+    "prebuild": "yarn build:clean",
     "build": "cross-env NODE_ENV=production zen build",
     "build:dev": "cross-env NODE_ENV=development zen build",
     "build:clean": "rimraf dist .awcache",
     "build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
-    "build:debug:verbose": "npm run build:debug -- -v",
-    "docker:build": "cross-env NODE_OPTIONS='--max_old_space_size=4096' npm run build && docker build . -t $npm_package_name:$npm_package_version",
-    "docker:build:debug": "npm run build:debug && docker build . -t $npm_package_name:$npm_package_version",
+    "build:debug:verbose": "yarn build:debug -- -v",
+    "docker:build": "cross-env NODE_OPTIONS='--max_old_space_size=4096' yarn build && docker build . -t $npm_package_name:$npm_package_version",
+    "docker:build:debug": "yarn build:debug && docker build . -t $npm_package_name:$npm_package_version",
     "docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
     "jest": "./node_modules/.bin/jest",
     "start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
@@ -32,11 +32,11 @@
     "test": "jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
-    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
-    "watch:debug": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch -- -v",
-    "watch:ssr": "cross-env SSR=true && npm run watch",
-    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env npm run zen:watch",
-    "watch:test": "cross-env ENV_FILE=../../config/test/test.env npm run zen:watch",
+    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
+    "watch:debug": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch -- -v",
+    "watch:ssr": "cross-env SSR=true && yarn watch",
+    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env yarn zen:watch",
+    "watch:test": "cross-env ENV_FILE=../../config/test/test.env yarn zen:watch",
     "zen:watch": "zen watch -x"
   },
   "jest": {
