--- a/servers/backend-server/Dockerfile
+++ b/servers/backend-server/Dockerfile
@@ -9,7 +9,7 @@ ENV PYTHON /usr/bin/python
 ADD package.json /tmp/package.json
 RUN set -ex \
 	&& cd /tmp \
-	&& npm install \
+	&& yarn install \
 	&& mkdir -p /home/app \
 	&& cp -a /tmp/node_modules /home/app/ \
 	&& rm -Rf /tmp/*
@@ -22,4 +22,4 @@ ADD . /home/app
 ENV PORT=8080
 EXPOSE ${PORT}
 
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
