--- a/packages/sample-store/package.json
+++ b/packages/sample-store/package.json
@@ -44,6 +44,11 @@
   "peerDependencies": {
     "inversify": "*"
   },
+  "devDependencies": {
+    "glob": "*",
+    "webpack-node-externals": "*",
+    "webpack": "*"
+  },
   "publishConfig": {
     "access": "public"
   },
