--- a/package.json
+++ b/package.json
@@ -42,15 +42,21 @@
     "devpublish:force": "yarn devpublish:forceManual -- --yes",
     "devpublish:forceManual": "yarn devpublish -- --force-publish=*",
     "devpublish:push": "yarn predevpublish && git push origin devpublish && yarn postdevpublish",
+    "format": "yarn lint --fix",
+    "format:md": "yarn lint:md --fix",
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "yarn generateGraphql -- --watch",
+    "husky-skip": "cross-env HUSKY_SKIP_HOOKS=1",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
-    "lint": "eslint -c .eslintrc.js --ext .ts ./packages/**/src/**/*.ts ./packages-modules/**/src/**/*.ts",
+    "lint": "eslint --ext js --ext ts --ext md",
+    "lint:ci": "yarn lint . --format junit",
     "lint:fix": "yarn lint -- --fix",
+    "lint:md": "markdownlint",
+    "lintx": "eslint -c .eslintrc.js --ext .ts ./packages/**/src/**/*.ts ./packages-modules/**/src/**/*.ts",
     "postbootstrap": "yarn build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
@@ -71,6 +77,22 @@
     "zen:exp": "zen exp",
     "zen:watch": "zen  watch -x",
     "zen:watch:debug": "yarn zen:watch -- -v"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.md": [
+      "yarn format:md",
+      "git add"
+    ],
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "resolutions": {
     "chokidar": "^3.4.0"
@@ -195,6 +217,7 @@
     "eslint-plugin-jest": "^24.3.3",
     "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-markdown": "^2.0.1",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
@@ -227,6 +250,7 @@
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
+    "markdownlint-cli": "^0.27.0",
     "merge": "^1.2.1",
     "mime": "^2.4.4",
     "mini-css-extract-plugin": "^0.9.0",
